--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.7.2
+Brotli==1.1.0
 Django==5.0.3
 djangorestframework==3.14.0
+gunicorn==21.2.0
+packaging==24.0
 pillow==10.2.0
 pytz==2024.1
 sqlparse==0.4.4
+whitenoise==6.6.0
